ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: result.dudeyouhavenoidea.me
      http:
        paths:
          - backend:
              service:
                name: result-service
                port:
                  number: 80
            pathType: Prefix
            path: "/"

    - host: voting.dudeyouhavenoidea.me
      http:
        paths:
          - backend:
              service:
                name: voting-service
                port:
                  number: 80
            pathType: Prefix
            path: "/"

    - host: prometheus.dudeyouhavenoidea.me
      http:
        paths:
          - backend:
              service:
                name: prometheus-server-ext
                port:
                  number: 6379
            pathType: Prefix
            path: "/"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-ingress
  namespace: sock-shop
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: minisock.dudeyouhavenoidea.me
      http:
        paths:
          - backend:
              service:
                name: front-end
                port:
                  number: 80
            pathType: Prefix
            path: "/"
